// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders two panels without crashing 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <AppStatusBar />
    <Connect(ScreenDecksAndQuizzes)
      onClickAddDeck={[Function]}
    />
  </View>
</Provider>
`;

exports[`renders without crashing 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <AppStatusBar />
    <NavigationContainer
      screenProps={
        Object {
          "onClickAddDeck": [Function],
        }
      }
    />
  </View>
</Provider>
`;
